Closed
Bug 231844
Opened 22 years ago
Closed 22 years ago
Crash loading favicons
Categories
(Camino Graveyard :: Bookmarks, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Camino0.8
People
(Reporter: mikepinkerton, Assigned: mikepinkerton)
Details
Someone emailed me their crash logs and it was full of:
Thread 0 Crashed:
#0 0x9083122c in objc_msgSend (objc_msgSend + 12)
#1 0x909f5580 in -[NSConcreteNotification
initWithName:object:userInfo:] (-[NSConcreteNotification
initWithName:object:userInfo:] + 104)
#2 0x909f5600 in -[NSNotificationCenter
postNotificationName:object:userInfo:] (-[NSNotificationCenter
postNotificationName:object:userInfo:] + 84)
#3 0x0003f794 in -[SiteIconProvider
doneRemoteLoad:forTarget:withUserData:data:status:]
(-[SiteIconProvider
doneRemoteLoad:forTarget:withUserData:data:status:] + 516)
#4 0x0003fd8c in
_ZN20RemoteURILoadManager16OnStreamCompleteEP15nsIStreamLoaderP11nsISupportsjjPKc
(_ZN20RemoteURILoadManager16OnStreamCompleteEP15nsIStreamLoaderP11nsISupportsjjPKc
+ 48)
#5 0x0016270c in
_ZN14nsStreamLoader13OnStopRequestEP10nsIRequestP11nsISupportsj
(_ZN14nsStreamLoader13OnStopRequestEP10nsIRequestP11nsISupportsj +
100)
#6 0x004622f0 in
_ZN13nsHttpChannel13OnStopRequestEP10nsIRequestP11nsISupportsj
(_ZN13nsHttpChannel13OnStopRequestEP10nsIRequestP11nsISupportsj + 484)
#7 0x007daa2c in 0x7daa2c
#8 0x050500e4 in PL_HandleEvent (PL_HandleEvent + 36)
#9 0x0504ffdc in PL_ProcessPendingEvents (PL_ProcessPendingEvents + 128)
#10 0x05050f8c in _ZN16nsEventQueueImpl20ProcessPendingEventsEv
(_ZN16nsEventQueueImpl20ProcessPendingEventsEv + 60)
#11 0x003ddcc0 in -[EventQueueHandler eventTimer:]
which seems to be that we're sending the notification for the favicon load to a
deleted object. is something not unregistering for the notification, or are we
not refcounting correctly? could it be the toolbar button or an item in the
bookmarks manager?
Assignee | ||
Updated•22 years ago
|
OS: Windows XP → MacOS X
Hardware: PC → Macintosh
Target Milestone: --- → Camino0.8
Assignee | ||
Comment 1•22 years ago
|
||
fixed. we were directly notifying a target object that had gone away. fix was to
retain the object and relase it when we were done with it, after sending the
notification.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•