retain the target and userData for our remote data callbacks, including site icon notification. fixes crash where target of notification would go away and we'd try to directly send it a notification (bug 231844)